# gpu-monitor

./: .gitignore  BACKEND_TELEMETRY_CONCEPTS.md  DEVICE_METRIC_SOURCE_MAP.md  KEY_PROPERTIES_REFERENCE.md  LICENSE  README.md  TELEMETRY_TROUBLESHOOTING.md  gpu_monitor_dashboard.html  main.py  pyproject.toml  schema.py
.github/workflows/: package.yml
__pycache__/: main.cpython-314.pyc.1900962213648  main.cpython-314.pyc.2119821058544  main.cpython-314.pyc.2457951121696  main.cpython-314.pyc.2999004999968
collectors/: amd.py  base.py  dxdiag.txt  factory.py  gpu_monitor_dashboard.html  intel.py  jetson.py  null.py  nvidia.py  windows.py
collectors/__pycache__/: intel.cpython-314.pyc.1773494672304  intel.cpython-314.pyc.2154111789744  intel.cpython-314.pyc.2189115812528  intel.cpython-314.pyc.2289877392304  intel.cpython-314.pyc.2313136138928  intel.cpython-314.pyc.2335945972496  intel.cpython-314.pyc.2490257365776  intel.cpython-314.pyc.2525502550928
gpu_monitor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
