[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpu-monitor"
version = "0.1.1"
description = "Portable GPU telemetry dashboard for Windows and Linux"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Kiana Harris" }
]
dependencies = [
  "fastapi",
  "uvicorn",
  "websockets",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Framework :: FastAPI",
]

[project.scripts]
gpu-monitor = "main:main"

[tool.setuptools]
packages = ["collectors"]
py-modules = ["main", "schema"]

[tool.setuptools.package-data]
collectors = ["gpu_monitor_dashboard.html"]
